--- a/mqttx-spring-boot-starter/pom.xml
+++ b/mqttx-spring-boot-starter/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>io.github.lianghengyuan</groupId>
     <artifactId>mqttx-spring-boot-starter</artifactId>
-    <version>1.0.10</version>
+    <version>1.0.11</version>
     <packaging>jar</packaging>
 
     <name>mqttx-spring-boot-starter</name>
@@ -48,7 +48,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-integration</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-mqtt</artifactId>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.eclipse.paho/org.eclipse.paho.client.mqttv3 -->
         <dependency>
             <groupId>org.eclipse.paho</groupId>
